--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 /* all font */
 .all-font {
     font-family: "Fira Sans", serif;
@@ -192,7 +191,7 @@ nav a{
     margin-top: 32px;
 }
 
-.yonus-description{
+.yunus-description{
     font-size: 16px;
     font-weight: regular;
     line-height: 24px;
@@ -201,13 +200,13 @@ nav a{
     background-repeat: no-repeat;
 }
 
-.yonus-designation strong{
+.yunus-designation strong{
     font-size: 20px;
     font-weight: semi-bold;
     line-height: 24px;
     color: #0E0E0E;
 }
-.yonus-designation{
+.yunus-designation{
     font-size: 16px;
     font-weight: regular;
     line-height: 24px;
