--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,18 +44,19 @@
     font-weight: bold;
     line-height: auto;
     }
-nav button{
+
+.nav button{
     width: 116px;
-    height: 52px;
+    height: 80px;
     border: 1px solid #006A50;
-    border-radius: 8px;
+    border-radius: 16px;
     background-color: transparent;
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 30px;
+    font-weight: 600px;
     line-height: auto;
 }
 
-nav a{
+.nav a{
     text-decoration: none;
     color: #006A50;
 }
